--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -1,3 +1,22 @@
+@import url('https://rsms.me/inter/inter.css');
+
+html {
+  font-family: 'Inter', sans-serif;
+  font-weight: 200;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+}
+
+.home .hero h1, .home .hero .description {
+  text-shadow: 0 0 5px rgba(15, 15, 15, 0.4);
+}
+
+.home .hero h1 {
+  font-weight: 200;
+}
+
 .home .hero .description, .home .feature p, .home .footer {
   color: #010b0a;
 }
