--- a/src/app/shared/designSystem/variables/_badge.scss
+++ b/src/app/shared/designSystem/variables/_badge.scss
@@ -4,11 +4,15 @@ $badge-font-size: $font-size-small;
 $badge-line-height: inherit;
 $badge-letter-spacing: inherit;
 $badge-border-radius: $brand-border-radius;
-$badge-font-weight: $font-weight-medium;
+$badge-font-weight: $font-weight-regular;
 
 $badge-outlined-border-width: 1px;
 
 $badge-variations: (
+  'default': (
+    'bg': $brand-default,
+    'color': foreground-color($brand-default),
+  ),
   'primary': (
     'bg': $brand-primary,
     'color': foreground-color($brand-primary),
