--- a/src/app/shared/designSystem/variables/_card.scss
+++ b/src/app/shared/designSystem/variables/_card.scss
@@ -3,19 +3,19 @@ $card-shadow: none;
 $card-border: 1px solid $brand-border-color;
 $card-border-radius: 0;
 $card-margin: 0;
+$card-color: $brand-text-color;
 
 $card-header-padding: $space-8 $space-16;
 $card-header-image-size: $space-40;
 $card-header-image-border-radius: 50%;
 $card-header-image-margin: $space-8 $space-12 0 0;
-$card-header-title-font-size: inherit;
-$card-header-title-font-weight: $font-weight-medium;
-$card-header-subtitle-font-size: inherit;
-$card-header-subtitle-font-weight: 300;
+$card-header-title-font-size: $font-size;
+$card-header-title-font-weight: $font-weight-regular;
+$card-header-subtitle-font-size: $font-size;
+$card-header-subtitle-font-weight: $font-weight-light;
 $card-header-subtitle-color: $brand-text-secondary-color;
 
 $card-body-padding: $space-8 $space-16;
 $card-body-font-size: inherit;
-$card-body-color: $brand-text-color;
 
 $card-footer-padding: $space-8;
