--- a/src/app/shared/designSystem/variables/_brand.scss
+++ b/src/app/shared/designSystem/variables/_brand.scss
@@ -4,45 +4,46 @@
 $space-unit: 0.8rem;
 
 /* Spacing */
-$space-2: $space-unit * 0.25; // 2px
-$space-4: $space-unit * 0.5; // 4px
-$space-8: $space-unit; // 8px
-$space-12: $space-unit * 1.5; // 12px
-$space-16: $space-unit * 2; // 16px
-$space-20: $space-unit * 2.5; // 20px
-$space-24: $space-unit * 3; // 24px
-$space-32: $space-unit * 4; // 32px
-$space-40: $space-unit * 5; // 40px
-$space-48: $space-unit * 6; // 48px
-$space-52: $space-unit * 6.5; // 52px
+$space-2: $space-unit * 0.25; //   2px
+$space-4: $space-unit * 0.5; //    4px
+$space-8: $space-unit; //          8px
+$space-12: $space-unit * 1.5; //  12px
+$space-16: $space-unit * 2; //    16px
+$space-20: $space-unit * 2.5; //  20px
+$space-24: $space-unit * 3; //    24px
+$space-32: $space-unit * 4; //    32px
+$space-40: $space-unit * 5; //    40px
+$space-48: $space-unit * 6; //    48px
+$space-52: $space-unit * 6.5; //  52px
 $space-84: $space-unit * 10.5; // 84px
 
 /* Brand Variations */
-$brand-primary: palette-color-level('coral', 100);
-$brand-secondary: palette-color-level('blue', 100);
-$brand-success: palette-color-level('green', 100);
-$brand-warning: palette-color-level('yellow', 100);
-$brand-danger: palette-color-level('red', 110);
+$brand-default: palette-color-level('grey', 70);
+$brand-primary: palette-color-level('coral', 50);
+$brand-secondary: palette-color-level('blue', 50);
+$brand-success: palette-color-level('green', 40);
+$brand-warning: palette-color-level('yellow', 40);
+$brand-danger: palette-color-level('red', 50);
 
 /* Background Colors */
-$brand-bg-color: palette-color-level('black', 0);
-$brand-bg-color-variant: palette-color-level('black', 2);
-$brand-bg-color-inverse: palette-color-level('black', 100);
-$brand-bg-color-variant-inverse: palette-color-level('black', 80);
+$brand-bg-color: palette-color-level('grey', 10);
+$brand-bg-color-variant: palette-color-level('grey', 20);
+$brand-bg-color-inverse: palette-color-level('grey', 100);
+$brand-bg-color-variant-inverse: palette-color-level('grey', 80);
 
 /* Text Colors */
-$brand-text-color: palette-color-level('black', 100);
-$brand-text-secondary-color: palette-color-level('black', 80);
-$brand-text-color-inverse: palette-color-level('black', 0);
-$brand-text-secondary-color-inverse: palette-color-level('black', 40);
+$brand-text-color: palette-color-level('grey', 100);
+$brand-text-secondary-color: palette-color-level('grey', 60);
+$brand-text-color-inverse: palette-color-level('grey', 10);
+$brand-text-secondary-color-inverse: palette-color-level('grey', 30);
 
 /* Link Color */
-$brand-link-color: palette-color-level('blue', 100);
-$brand-link-hover-color: palette-color-level('blue', 120);
+$brand-link-color: palette-color-level('blue', 70);
+$brand-link-hover-color: palette-color-level('blue', 70);
 
 /* Border Colors */
-$brand-border-color: palette-color-level('black', 15);
-$brand-border-color-inverse: palette-color-level('black', 80);
+$brand-border-color: palette-color-level('grey', 30);
+$brand-border-color-inverse: palette-color-level('grey', 60);
 $brand-border-radius: $space-4;
 
 /* Box Shadows */
