--- a/src/app/shared/designSystem/variables/_breadcrumb.scss
+++ b/src/app/shared/designSystem/variables/_breadcrumb.scss
@@ -1,5 +1,5 @@
 $breadcrumb-margin: 0 0 $space-32 0;
 $breadcrumb-padding: $space-32 0 0 0;
 $breadcrumb-link-color: $brand-link-color;
-$breadcrumb-link-hover-color: darken($breadcrumb-link-color, 5%);
+$breadcrumb-link-hover-color: $brand-link-hover-color;
 $breadcrumb-separator: '›';
