--- a/src/app/shared/designSystem/variables/_footer.scss
+++ b/src/app/shared/designSystem/variables/_footer.scss
@@ -1,6 +1,6 @@
 $footer-padding: $space-12 0 $space-12 0;
 $footer-bg: $brand-bg-color-inverse;
-$footer-color: $brand-text-color-inverse;
-$footer-link-color: $brand-text-color-inverse;
-$footer-link-hover-color: darken($footer-link-color, 5%);
+$footer-color: foreground-color($footer-bg);
+$footer-link-color: $footer-color;
+$footer-link-hover-color: $footer-link-color;
 $footer-link-font-weight: $link-font-weight;
