fix(generators): implement conditionals, fix kebabCase (#410)
closes #404, closes #408

--- a/.vuesion/generators/component/component.spec.ts.hbs
+++ b/.vuesion/generators/component/component.spec.ts.hbs
@@ -4,15 +4,11 @@ import {{ properCase componentName }} from './{{ properCase componentName }}.vue
 const localVue = createLocalVue();
 
 describe('{{ properCase componentName }}.vue', () => {
-
-test('renders component', () => {
-  const wrapper = mount<any>({{ properCase componentName }},
-    {
+  test('renders component', () => {
+    const wrapper = mount<any>({{ properCase componentName }}, {
       localVue,
-    },
-   );
+    });
 
-  expect(wrapper.text()).toBe('{{ properCase componentName }}');
-});
-
+    expect(wrapper.text()).toBe('{{ properCase componentName }}');
+  });
 });
