--- a/.vuesion/generators/connected/connected.vue.hbs
+++ b/.vuesion/generators/connected/connected.vue.hbs
@@ -7,20 +7,12 @@
         </vue-grid-item>
 
         <vue-grid-item fill>
-          <vue-button
-            color="secondary"
-            :loading="incrementPending"
-            @click='increment'>Increment +1
-          </vue-button>
+          <vue-button color="secondary" :loading="incrementPending" @click='increment'>Increment +1</vue-button>
           <br />
           <br />
         </vue-grid-item>
         <vue-grid-item fill>
-          <vue-button
-            color="primary"
-            :loading="decrementPending"
-            @click='decrement'>Decrement -1
-          </vue-button>
+          <vue-button color="primary" :loading="decrementPending" @click='decrement'>Decrement -1</vue-button>
           <vue-headline level="3">Count is \{{ count }}</vue-headline>
         </vue-grid-item>
       </vue-grid-row>
@@ -28,16 +20,16 @@
   </div>
 </template>
 
-<script lang="ts">
+<script lang="ts">{{#if wantVuex}}
 import { mapActions, mapGetters } from 'vuex';
-  import { registerModule } from '@/app/store';
-  import { {{ properCase moduleName }}Module } from '../module';
-  import { IPreLoad } from '@/server/isomorphic';
-  import VueGrid from '@/app/shared/components/VueGrid/VueGrid.vue';
-  import VueGridItem from '@/app/shared/components/VueGridItem/VueGridItem.vue';
-  import VueButton from '@/app/shared/components/VueButton/VueButton.vue';
-  import VueGridRow from '@/app/shared/components/VueGridRow/VueGridRow.vue';
-  import VueHeadline from '@/app/shared/components/VueHeadline/VueHeadline.vue';
+import { registerModule } from '@/app/store';
+import { {{ properCase moduleName }}Module } from '../module';
+import { IPreLoad } from '@/server/isomorphic';{{/if}}
+import VueGrid from '@/app/shared/components/VueGrid/VueGrid.vue';
+import VueGridItem from '@/app/shared/components/VueGridItem/VueGridItem.vue';
+import VueButton from '@/app/shared/components/VueButton/VueButton.vue';
+import VueGridRow from '@/app/shared/components/VueGridRow/VueGridRow.vue';
+import VueHeadline from '@/app/shared/components/VueHeadline/VueHeadline.vue';
 
 export default {
   metaInfo:   {
@@ -50,22 +42,19 @@ export default {
     VueGridRow,
     VueHeadline,
   },
-  methods:    {
-    ...mapActions('{{ camelCase moduleName }}', [
-      'increment',
-      'decrement',
-    ]),
+  methods: {
+{{#if wantVuex}}    ...mapActions('{{ camelCase moduleName }}', ['increment', 'decrement']),{{/if}}
   },
-  computed:   {
-    ...mapGetters('{{ camelCase moduleName }}', ['count', 'incrementPending', 'decrementPending']),
-  },
+  computed: {
+{{#if wantVuex}}    ...mapGetters('{{ camelCase moduleName }}', ['count', 'incrementPending', 'decrementPending']),{{/if}}
+  },{{#if wantVuex}}
   beforeCreate() {
     registerModule('{{ camelCase moduleName }}', {{ properCase moduleName }}Module);
   },
-  prefetch:   (options: IPreLoad) => {
+  prefetch: (options: IPreLoad) => {
     registerModule('{{ camelCase moduleName }}', {{ properCase moduleName }}Module);
     return options.store.dispatch('{{ camelCase moduleName }}/increment');
-  },
+  },{{/if}}
 };
 </script>
 
