--- a/.vuesion/generators/component/component.stories.ts.hbs
+++ b/.vuesion/generators/component/component.stories.ts.hbs
@@ -2,12 +2,12 @@ import { storiesOf } from '@storybook/vue';
 import { withInfo } from 'storybook-addon-vue-info';
 import {{ properCase componentName }} from './{{ properCase componentName }}.vue';
 
-const story = (storiesOf('{{ properCase componentName }}', module) as any);
+const story = storiesOf('{{ properCase componentName }}', module) as any;
 
 story.add(
   'Default',
   withInfo({})(() => ({
     components: { {{ properCase componentName }} },
-    template:   `<{{ camelCase componentName }}>{{ properCase componentName }}</{{ camelCase componentName }}>`,
-  }))
+    template: `<{{ kebabCase componentName }}>{{ properCase componentName }}</{{ kebabCase componentName }}>`,
+  })),
 );
