feat(vue-select): add label (#444)
closes #438

--- a/src/app/shared/designSystem/variables/_select.scss
+++ b/src/app/shared/designSystem/variables/_select.scss
@@ -1,10 +1,10 @@
-$select-bg: $brand-bg-color-variant;
-$select-shadow: none;
+$select-bg: $brand-bg-color;
 $select-margin: 0;
-$select-padding: $space-8 $space-12;
-$select-border: 1px solid $brand-border-color;
+$select-padding: $space-8 0;
 $select-color: foreground-color($select-bg);
+$select-font-family: $font-family;
 $select-font-size: $font-size;
+$select-font-weight: $font-weight-light;
 $select-arrow-color: $brand-secondary;
 
 $select-multi-max-height: $space-84;
