--- a/src/app/shared/designSystem/variables/_input.scss
+++ b/src/app/shared/designSystem/variables/_input.scss
@@ -6,7 +6,7 @@ $input-font-family: $font-family;
 $input-font-size: inherit;
 $input-font-weight: $font-weight-light;
 $input-color: $brand-text-color;
-$input-height: $space-32;
+$input-height: auto;
 $input-error-color: $brand-danger;
 
 $input-placeholder-top: 0;
