--- a/.vuesion/generators/module/getters.spec.ts.hbs
+++ b/.vuesion/generators/module/getters.spec.ts.hbs
@@ -8,15 +8,8 @@ describe('{{ properCase moduleName }}Getters', () => {
     testState = {{ properCase moduleName }}DefaultState();
   });
 
-  test('it should get the count', () => {
-    expect({{ properCase moduleName }}Getters.count(testState)).toBe(0);
-  });
-
-  test('it should get increment pending', () => {
-    expect({{ properCase moduleName }}Getters.incrementPending(testState)).toBe(false);
-  });
-
-  test('it should get decrement pending', () => {
-    expect({{ properCase moduleName }}Getters.decrementPending(testState)).toBe(false);
+  test('Please right the tests for the getters here', () => {
+    // here is an example: https://github.com/vuesion/vuesion/blob/master/src/app/counter/getters.spec.ts
+    expect(true).toBeFalsy();
   });
 });
