--- a/.vuesion/generators/module/mutations.spec.ts.hbs
+++ b/.vuesion/generators/module/mutations.spec.ts.hbs
@@ -8,18 +8,8 @@ describe('{{ properCase moduleName }}Mutations', () => {
     testState = {{ properCase moduleName }}DefaultState();
   });
 
-  test('it should set the count', () => {
-    {{ properCase moduleName }}Mutations.SET_COUNT(testState, 1337);
-    expect(testState.count).toBe(1337);
-  });
-
-  test('it should set increment pending', () => {
-    {{ properCase moduleName }}Mutations.SET_INCREMENT_PENDING(testState, true);
-    expect(testState.incrementPending).toBe(true);
-  });
-
-  test('it should set decrement pending', () => {
-    {{ properCase moduleName }}Mutations.SET_DECREMENT_PENDING(testState, true);
-    expect(testState.decrementPending).toBe(true);
+  test('Please right the tests for the mutations here', () => {
+    // here is an example: https://github.com/vuesion/vuesion/blob/master/src/app/counter/mutations.spec.ts
+    expect(true).toBeFalsy();
   });
 });
