--- a/.vuesion/generators/connected/connected.vue.hbs
+++ b/.vuesion/generators/connected/connected.vue.hbs
@@ -1,6 +1,8 @@
 <template>
   <div :class="$style.{{ camelCase componentName }}">
     <vue-grid>
+      <vue-breadcrumb :items="breadCrumbItems"></vue-breadcrumb>
+
       <vue-grid-row>
         <vue-grid-item fill>
           <vue-headline level="1">{{ properCase componentName }}</vue-headline>
@@ -10,15 +12,17 @@
   </div>
 </template>
 
-<script lang="ts">{{#if wantVuex}}
+<script lang="ts">
 import { registerModule } from '@/app/store';
-import { {{ properCase moduleName }}Module } from '../module';
-import { IPreLoad } from '@/server/isomorphic';{{/if}}
+import { IPreLoad } from '@/server/isomorphic';
 import VueGrid from '@/app/shared/components/VueGrid/VueGrid.vue';
+import VueBreadcrumb from '@components/VueBreadcrumb/VueBreadcrumb.vue';
+import VueGridRow from '@/app/shared/components/VueGridRow/VueGridRow.vue';
 import VueGridItem from '@/app/shared/components/VueGridItem/VueGridItem.vue';
 import VueButton from '@/app/shared/components/VueButton/VueButton.vue';
-import VueGridRow from '@/app/shared/components/VueGridRow/VueGridRow.vue';
 import VueHeadline from '@/app/shared/components/VueHeadline/VueHeadline.vue';
+
+import { {{ properCase singularName }}Module } from '../module';
 
 export default {
   metaInfo:   {
@@ -26,19 +30,27 @@ export default {
   },
   components: {
     VueGrid,
+    VueBreadcrumb,
+    VueGridRow,
     VueGridItem,
     VueButton,
-    VueGridRow,
     VueHeadline,
   },
   data: (): any => ({}),
   methods: {},
-  computed: {},{{#if wantVuex}}
+  computed: {
+    breadCrumbItems() {
+      return [
+        { label: this.$t('common.home' /* Home */), href: '/' },
+        { label: this.$t('common.{{ properCase singularName }}' /* {{ properCase singularName }} */), href: '/{{ dashCase singularName }}' },
+      ];
+    },
+  },
   beforeCreate() {
-    registerModule('{{ camelCase moduleName }}', {{ properCase moduleName }}Module);
+    registerModule('{{ camelCase singularName }}', {{ properCase singularName }}Module);
   },
   prefetch: (options: IPreLoad) => {
-    registerModule('{{ camelCase moduleName }}', {{ properCase moduleName }}Module);
+    registerModule('{{ camelCase singularName }}', {{ properCase singularName }}Module);
 
     /**
      * This is the function where you can load all the data that is needed
@@ -47,13 +59,13 @@ export default {
      * This function always returns a promise that means, if you want to
      * call a vuex action you have to return it, here is an example
      *
-     * return options.store.dispatch('myAction');
+     * return options.store.dispatch('fetch{{ properCase singularName }}', '1');
      *
      * If you need to fetch data from multiple source your can also return
      * a Promise chain or a Promise.all()
      */
     return Promise.resolve();
-  },{{/if}}
+  },
 };
 </script>
 
@@ -62,7 +74,6 @@ export default {
 
 .{{ camelCase componentName }} {
   margin-top: $nav-bar-height;
-  padding: $space-32 0;
   min-height: 500px;
 }
 </style>
