--- a/.vuesion/generators/module/getters.ts.hbs
+++ b/.vuesion/generators/module/getters.ts.hbs
@@ -1,16 +1,16 @@
-import { I{{ properCase moduleName }}State } from './state';
+import { I{{ properCase singularName }}State } from './state';
 
-export interface I{{ properCase moduleName }}Getters {
+export interface I{{ properCase singularName }}Getters {
   /**
    * put your getter names, parameters and return values here, for example:
-   * myAction(context: ActionContext<I{{ properCase moduleName }}State, IState>, param: any): Promise<any>;
+   * myAction(context: ActionContext<I{{ properCase singularName }}State, IState>, param: any): Promise<any>;
    */
 }
 
-export const {{ properCase moduleName }}Getters: I{{ properCase moduleName }}Getters = {
+export const {{ properCase singularName }}Getters: I{{ properCase singularName }}Getters = {
   /**
    * here comes the implementation of your getters, for example:
-   * myGetter(state: I{{ properCase moduleName }}State) {
+   * myGetter(state: I{{ properCase singularName }}State) {
    *   return state.myAttribute;
    * }
    */
