--- a/.vuesion/generators/module/mutations.ts.hbs
+++ b/.vuesion/generators/module/mutations.ts.hbs
@@ -1,13 +1,13 @@
-import { I{{ properCase moduleName }}State } from './state';
+import { I{{ properCase singularName }}State } from './state';
 
-export interface I{{ properCase moduleName }}Mutations {
+export interface I{{ properCase singularName }}Mutations {
   /**
    * put your mutations names, parameters and return values here, for example:
-   * MY_MUTATION(context: ActionContext<I{{ properCase moduleName }}State, IState>, param: any): void;
+   * MY_MUTATION(context: ActionContext<I{{ properCase singularName }}State, IState>, param: any): void;
    */
 }
 
-export const {{ properCase moduleName }}Mutations: I{{ properCase moduleName }}Mutations = {
+export const {{ properCase singularName }}Mutations: I{{ properCase singularName }}Mutations = {
   /**
    * here comes the implementation of your mutations, for example:
    * MY_MUTATION: (state, param) {
