--- a/.vuesion/generators/crud-module/state.ts.hbs
+++ b/.vuesion/generators/crud-module/state.ts.hbs
@@ -1,8 +1,12 @@
+import { I{{ properCase singularName }} } from './I{{ properCase singularName }}';
+
 export interface I{{ properCase singularName }}State {
   /**
    * put your state attributes here, for example:
    * myAttribute: any;
    */
+  {{ camelCase pluralName }}: I{{ properCase singularName }}[];
+  current{{ properCase singularName }}: I{{ properCase singularName }};
 }
 
 export const {{ properCase singularName }}DefaultState = (): I{{ properCase singularName }}State => {
@@ -11,5 +15,7 @@ export const {{ properCase singularName }}DefaultState = (): I{{ properCase sing
      * put your default value here, for example:
      * myAttribute: null,
      */
+    {{ camelCase pluralName }}: [],
+    current{{ properCase singularName }}: null,
   };
 };
