--- a/.vuesion/generators/module/actions.spec.ts.hbs
+++ b/.vuesion/generators/module/actions.spec.ts.hbs
@@ -1,25 +1,25 @@
 import { ActionContext, Commit, Dispatch } from 'vuex';
 import MockAdapter from 'axios-mock-adapter';
-import { {{ properCase moduleName }}DefaultState, I{{ properCase moduleName }}State } from './state';
+import { {{ properCase singularName }}DefaultState, I{{ properCase singularName }}State } from './state';
 import { IState } from '@/app/state';
-import { {{ properCase moduleName }}Actions } from './actions';
+import { {{ properCase singularName }}Actions } from './actions';
 import { HttpService } from '@/app/shared/services/HttpService/HttpService';
 
-describe('{{ properCase moduleName }}Actions', () => {
-  let testContext: ActionContext<I{{ properCase moduleName }}State, IState>;
+describe('{{ properCase singularName }}Actions', () => {
+  let testContext: ActionContext<I{{ properCase singularName }}State, IState>;
   let mockAxios: MockAdapter;
 
   beforeEach(() => {
     testContext = {
       dispatch: jest.fn() as Dispatch,
       commit: jest.fn() as Commit,
-      state: {{ properCase moduleName }}DefaultState(),
-    } as ActionContext<I{{ properCase moduleName }}State, IState>;
+      state: {{ properCase singularName }}DefaultState(),
+    } as ActionContext<I{{ properCase singularName }}State, IState>;
 
     mockAxios = new MockAdapter(HttpService);
   });
 
-  test('Please right the tests for the actions here', () => {
+  test('Please write the tests for the actions here', () => {
     // here is an example: https://github.com/vuesion/vuesion/blob/master/src/app/counter/actions.spec.ts
     expect(true).toBeFalsy();
   });
