--- a/.vuesion/generators/module/actions.ts.hbs
+++ b/.vuesion/generators/module/actions.ts.hbs
@@ -1,16 +1,16 @@
 import { ActionContext } from 'vuex';
-import { I{{ properCase moduleName }}State } from './state';
+import { I{{ properCase singularName }}State } from './state';
 import { IState } from '@/app/state';
 import { HttpService } from '@/app/shared/services/HttpService/HttpService';
 
-export interface I{{ properCase moduleName }}Actions {
+export interface I{{ properCase singularName }}Actions {
   /**
    * put your action names, parameters and return values here, for example:
-   * myAction(context: ActionContext<I{{ properCase moduleName }}State, IState>, param: any): Promise<any>;
+   * myAction(context: ActionContext<I{{ properCase singularName }}State, IState>, param: any): Promise<any>;
    */
 }
 
-export const {{ properCase moduleName }}Actions: I{{ properCase moduleName }}Actions = {
+export const {{ properCase singularName }}Actions: I{{ properCase singularName }}Actions = {
   /**
    * here comes the implementation of your actions, for example:
    * myAction({ commit }, param) {
