--- a/.vuesion/generators/module/getters.spec.ts.hbs
+++ b/.vuesion/generators/module/getters.spec.ts.hbs
@@ -1,14 +1,14 @@
-import { {{ properCase moduleName }}Getters } from './getters';
-import { {{ properCase moduleName }}DefaultState, I{{ properCase moduleName }}State } from './state';
+import { {{ properCase singularName }}Getters } from './getters';
+import { {{ properCase singularName }}DefaultState, I{{ properCase singularName }}State } from './state';
 
-describe('{{ properCase moduleName }}Getters', () => {
-  let testState: I{{ properCase moduleName }}State;
+describe('{{ properCase singularName }}Getters', () => {
+  let testState: I{{ properCase singularName }}State;
 
   beforeEach(() => {
-    testState = {{ properCase moduleName }}DefaultState();
+    testState = {{ properCase singularName }}DefaultState();
   });
 
-  test('Please right the tests for the getters here', () => {
+  test('Please write the tests for the getters here', () => {
     // here is an example: https://github.com/vuesion/vuesion/blob/master/src/app/counter/getters.spec.ts
     expect(true).toBeFalsy();
   });
